alignment fixed

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -211,7 +211,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 #header .hleft img {
@@ -263,7 +263,7 @@
     display: flex;
     list-style: none;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     width: 100%;
     height: 100%;
     margin: 0px;
